--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "slim/slim": "~2.4",
         "slim/views": "~0.1",
         "twig/twig": "~1.16",
-        "j4mie/idiorm": "~1.5"
+        "j4mie/idiorm": "~1.5",
+        "guzzle/guzzle": "~3.9"
     }
 }
